<resources>
    <string name="app_name">Smart Calculator</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="_point">.</string>
    <string name="subtraction">-</string>
    <string name="equality">=</string>
    <string name="addition">+</string>
    <string name="division">/</string>
    <string name="multiplication">x</string>
    <string name="percent">%</string>
    <string name="cancel_button">c</string>
    <string name="correct_button"><![CDATA[<]]></string>
    <string name="_00">00</string>
    <string name="different_style_first">different_style_first</string>
    <string name="appthemelight">AppThemeLight</string>
    <string name="settings">settings</string>


</resources>