<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="10dp"
        android:textSize="@dimen/textSize"
        app:layout_constraintVertical_bias="0.2"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel_button"
        android:textSize="@dimen/percent"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/correct_button"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_1"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/correct_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correct_button"
        android:textSize="@dimen/correct_button"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintStart_toEndOf="@+id/reset"
        app:layout_constraintEnd_toStartOf="@+id/percent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_2"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/percent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/percent"
        android:textSize="@dimen/percent"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintStart_toEndOf="@+id/correct_button"
        app:layout_constraintEnd_toStartOf="@+id/addition"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_3"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/addition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addition"
        android:textSize="@dimen/addition"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintVertical_bias="0.9"
        app:layout_constraintStart_toEndOf="@+id/percent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/subtraction"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        android:textSize="@dimen/button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_2"
        app:layout_constraintTop_toBottomOf="@+id/reset"
        app:layout_constraintBottom_toTopOf="@id/button_4"
        app:layout_constraintHorizontal_chainStyle="packed"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        android:textSize="@dimen/button_text"
        app:layout_constraintStart_toEndOf="@+id/button_1"
        app:layout_constraintEnd_toStartOf="@+id/button_3"
        app:layout_constraintTop_toBottomOf="@+id/correct_button"
        app:layout_constraintBottom_toTopOf="@id/button_5"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        android:textSize="@dimen/button_text"
        app:layout_constraintStart_toEndOf="@+id/button_2"
        app:layout_constraintEnd_toStartOf="@+id/subtraction"
        app:layout_constraintTop_toBottomOf="@+id/percent"
        app:layout_constraintBottom_toTopOf="@id/button_6"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/subtraction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subtraction"
        android:textSize="@dimen/subtraction"
        app:layout_constraintStart_toEndOf="@+id/button_3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addition"
        app:layout_constraintBottom_toTopOf="@id/division"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4"
        android:textSize="@dimen/button_text"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_5"
        app:layout_constraintTop_toBottomOf="@+id/button_1"
        app:layout_constraintBottom_toTopOf="@id/button_7"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        android:textSize="@dimen/button_text"
        app:layout_constraintStart_toEndOf="@+id/button_4"
        app:layout_constraintEnd_toStartOf="@+id/button_6"
        app:layout_constraintTop_toBottomOf="@+id/button_2"
        app:layout_constraintBottom_toTopOf="@id/button_8"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6"
        android:textSize="@dimen/button_text"
        app:layout_constraintStart_toEndOf="@+id/button_5"
        app:layout_constraintEnd_toStartOf="@+id/division"
        app:layout_constraintTop_toBottomOf="@+id/button_3"
        app:layout_constraintBottom_toTopOf="@id/button_9"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/division"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/division"
        android:textSize="@dimen/division"
        app:layout_constraintStart_toEndOf="@+id/button_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subtraction"
        app:layout_constraintBottom_toTopOf="@id/multiplication"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_7"
        android:textSize="@dimen/button_text"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_8"
        app:layout_constraintTop_toBottomOf="@+id/button_4"
        app:layout_constraintBottom_toTopOf="@id/button_0"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_8"
        android:textSize="@dimen/button_text"
        app:layout_constraintStart_toEndOf="@+id/button_7"
        app:layout_constraintEnd_toStartOf="@+id/button_9"
        app:layout_constraintTop_toBottomOf="@+id/button_5"
        app:layout_constraintBottom_toTopOf="@id/button_double0"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_9"
        android:textSize="@dimen/button_text"
        app:layout_constraintStart_toEndOf="@+id/button_8"
        app:layout_constraintEnd_toStartOf="@+id/multiplication"
        app:layout_constraintTop_toBottomOf="@+id/button_6"
        app:layout_constraintBottom_toTopOf="@id/button_point"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/multiplication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/multiplication"
        android:textSize="@dimen/multiplication"
        app:layout_constraintStart_toEndOf="@+id/button_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/division"
        app:layout_constraintBottom_toTopOf="@id/button_equality"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        android:textSize="@dimen/button_text"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_double0"
        app:layout_constraintTop_toBottomOf="@+id/button_7"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_double0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_00"
        android:textSize="@dimen/button_text"
        app:layout_constraintStart_toEndOf="@+id/button_0"
        app:layout_constraintEnd_toStartOf="@+id/button_point"
        app:layout_constraintTop_toBottomOf="@+id/button_8"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_point"
        android:textSize="@dimen/point"
        app:layout_constraintStart_toEndOf="@+id/button_double0"
        app:layout_constraintEnd_toStartOf="@+id/button_equality"
        app:layout_constraintTop_toBottomOf="@+id/button_9"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_equality"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/equality"
        android:textSize="@dimen/button_text"
        app:layout_constraintStart_toEndOf="@+id/button_point"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/multiplication"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textSize="@dimen/button_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>
